RESPTHEME-117 Fixed - post meta icon spacing issue

--- a/core/sass/style.scss
+++ b/core/sass/style.scss
@@ -36,7 +36,8 @@ body {
 
 [class^="icon-"],
 [class*=" icon-"] {
-    margin: 0px 5px;
+    margin-right: 5px;
+	margin-left: 5px;
 }
 
 /*--------------------------------------------------------------
